last minute changes

--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ input[type='submit']:hover {
 	height:100vh
 }
 .site-header {
-	background:#4191ce url('https://2016.athens.wordcamp.org/files/2016/07/texnopolis_panoramic.jpg') 50% 100% no-repeat;
+	background:#4191ce url('http://2016.athens.wordcamp.org/files/2016/07/headerimage.jpg') 50% 100% no-repeat;
 	background-size:cover !important;
 	margin-bottom:7.75rem;
 	position:relative;
@@ -566,6 +566,10 @@ article.post,article.page {
 	background:#fff0df;
 	border-color:#fdc17b;
 	outline:none
+}
+
+.entry-content a  {
+	font-weight: bold;
 }
 .entry-content .contact-submit,.comment-content .contact-submit {
 	margin:1rem 0;
