--- a/style.css
+++ b/style.css
@@ -207,6 +207,14 @@ input[type='submit']:hover {
     text-align: center;
 }
 
+.post .site-header {
+    background: #4191ce url('http://2016.athens.wordcamp.org/files/2016/07/headerimage.jpg') 50% 50% no-repeat;
+    background-size: cover !important;
+    margin-bottom: 7.75rem;
+    position: relative;
+    text-align: center;
+}
+
 .menu-primary-nav-container {
 	width:800px;
 	margin:auto;
