--- a/style.css
+++ b/style.css
@@ -632,6 +632,7 @@ article.post,article.page,
 	margin-bottom:1.6875rem;
 	padding:2.53125rem
 }
+span.required {color:#FF2200;}
 .comments-area .comments-title {
 	font-size:2.25rem;
 	line-height:1.125;
