--- a/style.css
+++ b/style.css
@@ -633,6 +633,7 @@ article.post,article.page,
 	padding:2.53125rem
 }
 span.required {color:#FF2200;}
+p.comment-notes{font-size: 1rem;}
 .comments-area .comments-title {
 	font-size:2.25rem;
 	line-height:1.125;
