--- a/style.css
+++ b/style.css
@@ -633,7 +633,7 @@ article.post,article.page,
 	padding:2.53125rem
 }
 span.required {color:#FF2200;}
-p.comment-notes{font-size: 0.875rem;}
+p.comment-notes{font-size: 0.875rem; margin: 20px 0 45px;}
 .comments-area .comments-title {
 	font-size:2.25rem;
 	line-height:1.125;
