--- a/style.css
+++ b/style.css
@@ -634,6 +634,7 @@ article.post,article.page,
 }
 span.required {color:#FF2200;}
 p.comment-notes{font-size: 0.875rem; margin: 20px 0 45px;}
+label{display: block;}
 .comments-area .comments-title {
 	font-size:2.25rem;
 	line-height:1.125;
