Reduse the width of submit button
Updated!

--- a/style.css
+++ b/style.css
@@ -634,7 +634,7 @@ article.post,article.page,
 }
 span.required {color:#FF2200;}
 label {display: block; margin:18px 0 8px;}
-p.form-submit{ margin:32px 0 48px;}
+p.form-submit{ margin:32px 0 48px; width: 40%}
 p.comment-notes{font-size: 0.875rem; margin: 20px 0 45px;}
 .comments-area .comments-title {
 	font-size:2.25rem;
