Ovveride contact-form
Updates!

--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ a.genericon-youtube:hover::before {
 	color:#b00 !important
 }
 
+.contact-form input[type="email"], .contact-form input[type="text"]{
+	max-width: 80%!important;
+}
+
 /*******************************************************************************************************/
 
 html,body,div,span,applet,object,iframe,
