--- a/style.css
+++ b/style.css
@@ -42,7 +42,10 @@ a.genericon-youtube:hover::before {
 	color:#b00 !important
 }
 
-
+.contact-form input[type="email"], .contact-form input[type="text"]
+{
+	width:79%!important;
+}
 /*******************************************************************************************************/
 
 html,body,div,span,applet,object,iframe,
