--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ a.genericon-youtube:hover::before {
 	max-width: 80%!important;
 }
 
-.contact-form input[type="email"], .contact-form input[type="text"]{width: 98%; max-width: 98%;}
+.contact-form input[type="email"], .contact-form input[type="text"]{width: 98%!important; max-width: 98%!important;}
 /*******************************************************************************************************/
 
 html,body,div,span,applet,object,iframe,
