--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ input[type='submit']:hover {
 	content:''
 }
 .main-navigation ul > li.menu-item-has-children {
-	position:relative
+	position:relative;
 }
 .main-navigation ul > li.menu-item-has-children > a {
 	padding-right:1rem
@@ -279,7 +279,7 @@ input[type='submit']:hover {
 	height:0;
 	width:0;
 	border:4px solid transparent;
-	border-top-color:#83bcb3
+	border-top-color:#fff;
 }
 .main-navigation ul > li.menu-item-has-children > a:hover:after {
 	border-top-color:#e97067
