--- a/style.css
+++ b/style.css
@@ -46,6 +46,19 @@ a.genericon-youtube:hover::before {
 
 .contact-form input[type="email"],.contact-form input[type="text"]{width:80%!important; max-width:80%!important;}
 .wcorg-sponsor h3{display: none!important;}
+
+.post-33 .entry-content p, .comment-content p, .entry-content address {
+    line-height: 1.5;
+    margin: 0 0 0.5rem;
+    display: inline;
+}
+
+.wcorg-speaker-description img {
+    border-radius: 3rem;
+    display: inline-block;
+    float: left;
+    margin-right: 1rem;
+}
 /*******************************************************************************************************/
 
 html,body,div,span,applet,object,iframe,
