--- a/style.css
+++ b/style.css
@@ -64,7 +64,10 @@ a.genericon-youtube:hover::before {
 
 .post-33 h2 {
     border-bottom: 2px solid #4191ce;
-    padding-bottom: 0.5rem;
+    padding-bottom: .5rem;
+    font-weight: 700;
+    font-style: italic;
+    color: #125080;
 }
 /*******************************************************************************************************/
 
