--- a/style.css
+++ b/style.css
@@ -70,6 +70,20 @@ a.genericon-youtube:hover::before {
     color: #125080;
     margin: 45px 0 9px!important;
 }
+
+#tix-attendees .avatar {
+    float: left;
+    width: 65px!important;
+    height: 65px!important;
+    border-radius: 5rem!important;
+}
+
+#tix-attendees .tix-field {
+    display: block;
+    margin-left: 70px;
+    font-size: 16px!important;
+    /* width: 100%; */
+}
 /*******************************************************************************************************/
 
 html,body,div,span,applet,object,iframe,
