--- a/style.css
+++ b/style.css
@@ -422,7 +422,7 @@ input[type='submit']:hover {
 }
 @media screen and (min-width: 576px) {
 	#after-header-widgets .widget {
-		width:25%
+		width:33%;
 	}
 }
 #after-header-widgets .textwidget h4 {
